--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@ body {
   font-size: 62.5%;
   font-family: 'Roboto',sans-serif;
 }
+*::-webkit-scrollbar{
+  width: 5px;
+  height: 5px;
+}
+*::-webkit-scrollbar-thumb{
+  background: #5f5f5f;
+}
 button{
   cursor: pointer;
 }
