--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 }
+html{
+  font-size: 62.5%;
+}
 *{
   margin: 0;
   padding: 0;
+  font-size: 1rem;
   box-sizing: border-box;
-  font-size: 62.5%;
   font-family: 'Roboto',sans-serif;
 }
 *::-webkit-scrollbar{
