--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html{
 *{
   margin: 0;
   padding: 0;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   box-sizing: border-box;
   font-family: 'Roboto',sans-serif;
 }
@@ -23,6 +23,10 @@ html{
 }
 *::-webkit-scrollbar-thumb{
   background: #5f5f5f;
+}
+input{
+  outline: none;
+  border: none;
 }
 button{
   cursor: pointer;
